cluster/apps/media/bazarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`bazarr.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: bazarr
      namespace: media
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
